/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our Samples at https://docs.gradle.org/9.2.1/samples
 */

plugins{
    id("java")
    id("org.springframework.boot") version "3.4.1" apply false
    id("io.spring.dependency-management") version "1.1.7" apply false
}

subprojects{
    apply(plugin = "java")
    apply(plugin = "org.springframework.boot")
    apply(plugin = "io.spring.dependency-management") 
    
    group = "com.example"
    version = "0.0.1-SNAPSHOT"

    java{
        toolchain{
            languageVersion.set(JavaLanguageVersion.of(21))
        }
    }

    repositories{
        mavenCentral()
    }

    dependencies{
        testImplementation("org.springframework.boot:spring-boot-starter-web")
        testRuntimeOnly("org.junit.platform:junit-platform-launcher")
    }

    tasks.withType<Test> {
        useJUnitPlatform()
    }
}